Fix alignment of forecast items

--- a/src/components/forecast/forecast.css
+++ b/src/components/forecast/forecast.css
@@ -1,11 +1,11 @@
 @import url('../../index.css');
 
 .forecast {
-  display: flex;
-  gap: 2rem;
-  justify-content: space-between;
+  display: grid;
+  grid: 1fr / 1fr 1fr 1fr;
   align-items: center;
-  margin-inline: 3rem;
+  justify-items: center;
+  text-align: center;
 }
 
 .forecast-wrapper:hover {
